--- a/src/MotleyFlash/project.json
+++ b/src/MotleyFlash/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "0.1.0-*",
+    "version": "0.2.0-*",
     "description": "Provides a foundation for managing flash messages.",
     "authors": [ "Bill Boga" ],
     "packOptions": {
@@ -7,10 +7,12 @@
         "projectUrl": "https://github.com/billboga/motleyflash/",
         "licenseUrl": "https://raw.githubusercontent.com/billboga/motleyflash/master/LICENSE"
     },
-    "dependencies": {
-        "NETStandard.Library": "1.5.0-rc2-24027"
-    },
     "frameworks": {
-        "netstandard1.1": { }
+        "netstandard1.1": {
+            "dependencies": {
+                "NETStandard.Library": "1.5.0-rc2-24027"
+            }
+        },
+        "net3.5": { }
     }
 }
