--- a/src/MotleyFlash.AspNetCore.MessageProviders/project.json
+++ b/src/MotleyFlash.AspNetCore.MessageProviders/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "0.1.0-*",
+    "version": "0.2.0-*",
     "description": "Leverages MotleyFlash and contains useful message providers for ASP.NET Core.",
     "authors": [ "Bill Boga" ],
     "packOptions": {
@@ -8,14 +8,15 @@
         "licenseUrl": "https://raw.githubusercontent.com/billboga/motleyflash/master/LICENSE"
     },
     "dependencies": {
-        "NETStandard.Library": "1.5.0-rc2-24027",
+        "NETStandard.Library": "1.6.0",
         "Newtonsoft.Json": "8.0.3",
-        "Microsoft.AspNetCore.Http.Features": "1.0.0-rc2-final",
-        "MotleyFlash": "0.2.0-*"
+        "Microsoft.AspNetCore.Http.Features": "1.0.0",
+        "MotleyFlash": "0.3.0-*"
     },
     "frameworks": {
-        "netstandard1.5": {
+        "netstandard1.6": {
             "imports": "dnxcore50"
-        }
+        },
+        "net451": { }
     }
 }
