--- a/src/MotleyFlash.AspNetCore.ViewHelpers/project.json
+++ b/src/MotleyFlash.AspNetCore.ViewHelpers/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "0.1.0-*",
+    "version": "0.2.0-*",
     "description": "Leverages MotleyFlash and contains useful view helpers for ASP.NET Core.",
     "authors": [ "Bill Boga" ],
     "packOptions": {
@@ -13,13 +13,14 @@
         }
     },
     "dependencies": {
-        "NETStandard.Library": "1.5.0-rc2-24027",
-        "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0-rc2-final",
-        "MotleyFlash": "0.2.0-*"
+        "NETStandard.Library": "1.6.0",
+        "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0",
+        "MotleyFlash": "0.3.0-*"
     },
     "frameworks": {
-        "netstandard1.5": {
+        "netstandard1.6": {
             "imports": "dnxcore50"
-        }
+        },
+        "net451": {}
     }
 }
