--- a/src/MotleyFlash/project.json
+++ b/src/MotleyFlash/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "0.2.0-*",
+    "version": "0.3.0-*",
     "description": "Provides a foundation for managing flash messages.",
     "authors": [ "Bill Boga" ],
     "packOptions": {
@@ -10,7 +10,7 @@
     "frameworks": {
         "netstandard1.1": {
             "dependencies": {
-                "NETStandard.Library": "1.5.0-rc2-24027"
+                "NETStandard.Library": "1.6.0"
             }
         },
         "net3.5": { }
